# codex-oss-readiness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: application-evidence-log.md  application-form-walkthrough.md  application-workbook.md  ci-debugging-lab.md  codex-api-credits-plan.md  commit-and-branch-guide.md  final-application-audit.md  first-commit-and-publish.md  first-pr-lab.md  first-release-lab.md  github-4-week-plan.md  github-auth-and-push-guide.md  github-cheatsheet.md  github-labels.md  github-profile-checklist.md  github-skills-matrix.md  issue-triage-guide.md  maintenance-backlog.md  openai-org-id-guide.md  pr-review-guide.md  privacy-and-public-repo.md  private-info.template.md  release-checklist.md  repository-settings-checklist.md  week-by-week-tracker.md
src/codex_oss_readiness/: __init__.py  application_audit.py  checks.py  cli.py  skills_audit.py
tests/: test_application_audit.py  test_checks.py  test_cli.py  test_skills_audit.py
